$Id: ChangeLog,v 1.166 2005/06/27 13:39:15 bkc_alpha Exp $

2005-06-27 BouKiCHi
    * Changed CLRSPR's color table to use ATRBAS

2005-06-26 BouKiCHi
    * Changed LDIRVM/LDIRMV routine don't change IM.
    * Improved SETPAG routine to work fine on SCREEN7.
    * Changed GETPLT to preserve HL.

2005-06-25 BouKiCHi
    * Improved Reg.R is not fixing at odd or even when call key_int.
    * Changed the way of timing adjustment.

2005-06-22 BouKiCHi
    * Fixed GTTRIG to get status of space when Reg.A is above 5.
    * Implemented multiply of BASIC statements temporarily.

2005-06-21 Albert Beevendorp
    * fixed a bug in the clock chip access routines
      fixes clock chip storage in Palette Editor (and all other
      titles using it)

2005-06-20 BouKiCHi
    * Changed BLTVM's behavior in SCREEN 8 to check zero before djnz.

2005-06-19 BouKiCHi
    * Splited MAPXYC routine from GRPPRT routine
    * Fixed MAPXYC's position Y is rounded down
      TODO : investigate more detail
    * Implemented FETCHC
    * Implemented dummy BASIC statements
    * Improved BREAKX returns value
    * Changed around $0d02 to actual instructions(not jump)

2005-06-18 Albert Beevendorp
    * adjusted blueMSX configs to include the logo rom
    * adjusted NLMSX configs to include the logo rom

2005-06-18 BouKiCHi
    * Removed extrom's debug print for address check.

2005-06-16 Albert Beevendorp
    * seperated logo.asm from main.asm
      - added 3 logo compilation sources like main has
      - hardcoded BIOS entries in logo.asm as they're not
        accessible using names anymore
      - adjusted openMSX configs to include the logo rom
      - adjusted make.bat and Makefile to compile the logo
        TODO: review and test Makefile
      - adjusted structure.bat to copy the logo roms to the
        correct paths as well
      - the default screen when the logo isn't found could
        be better

2005-06-16 BouKiCHi
    * Added recognize function key in keychk